--- a/src/ui/public/integration.html
+++ b/src/ui/public/integration.html
@@ -4,169 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>podcli — Integration</title>
+  <link rel="icon" type="image/png" href="/podcli-icon-transparent.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
-    :root {
-      --bg: #0b0b0d;
-      --surface: #131316;
-      --surface2: #1b1b20;
-      --border: #252530;
-      --border-hover: #35354a;
-      --text: #e8e8e2;
-      --text2: #77776f;
-      --text3: #4e4e48;
-      --accent: #d4874a;
-      --accent-hover: #e09860;
-      --accent-subtle: rgba(212, 135, 74, 0.10);
-      --accent-glow: rgba(212, 135, 74, 0.25);
-      --green: #4ade80;
-      --green-subtle: rgba(74, 222, 128, 0.07);
-      --green-border: rgba(74, 222, 128, 0.18);
-      --red: #f87171;
-      --red-subtle: rgba(248, 113, 113, 0.07);
-      --red-border: rgba(248, 113, 113, 0.18);
-      --blue: #60a5fa;
-      --blue-subtle: rgba(96, 165, 250, 0.08);
-      --blue-border: rgba(96, 165, 250, 0.18);
-      --radius: 12px;
-      --radius-sm: 8px;
-      --ease: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: var(--bg); color: var(--text); min-height: 100vh;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    .app { max-width: 780px; margin: 0 auto; padding: 48px 32px 96px; }
-
-    /* ─── Header ─── */
+    .app { max-width: 780px; }
     .header { margin-bottom: 40px; }
-    .nav { display: flex; align-items: center; justify-content: space-between; margin-bottom: 28px; }
-    .logo { font-size: 13px; font-weight: 700; letter-spacing: 1.2px; color: var(--text3); text-transform: uppercase; text-decoration: none; }
-    .logo span { color: var(--accent); }
-    .nav-link {
-      font-size: 13px; font-weight: 600; color: var(--text2);
-      text-decoration: none; padding: 6px 14px;
-      border-radius: var(--radius-sm); border: 1px solid var(--border);
-      transition: all 0.15s var(--ease);
-    }
-    .nav-link:hover { border-color: var(--border-hover); color: var(--text); }
-    h1 { font-size: 28px; font-weight: 700; letter-spacing: -0.5px; line-height: 1.15; }
-    .subtitle { font-size: 14px; color: var(--text2); margin-top: 8px; line-height: 1.6; }
-
-    /* ─── Status Bar ─── */
-    .status-bar {
-      display: flex; align-items: center; gap: 10px;
-      padding: 12px 16px; border-radius: var(--radius);
-      font-size: 13px; font-weight: 500; margin-bottom: 32px;
-    }
-    .status-bar.ok { background: var(--green-subtle); border: 1px solid var(--green-border); color: var(--green); }
-    .status-bar.err { background: var(--red-subtle); border: 1px solid var(--red-border); color: var(--red); }
-    .status-bar.warn { background: var(--blue-subtle); border: 1px solid var(--blue-border); color: var(--blue); }
-    .status-dot { width: 8px; height: 8px; border-radius: 50%; flex-shrink: 0; }
-    .status-bar.ok .status-dot { background: var(--green); }
-    .status-bar.err .status-dot { background: var(--red); }
-    .status-bar.warn .status-dot { background: var(--blue); }
-
-    /* ─── Card ─── */
-    .card {
-      background: var(--surface); border: 1px solid var(--border);
-      border-radius: var(--radius); padding: 24px; margin-bottom: 20px;
-      transition: border-color 0.2s var(--ease);
-    }
-    .card:hover { border-color: var(--border-hover); }
-    .card-label {
-      font-size: 11px; font-weight: 700; letter-spacing: 0.8px;
-      color: var(--text2); text-transform: uppercase; margin-bottom: 16px;
-    }
-    .card-title {
-      font-size: 16px; font-weight: 700; margin-bottom: 6px; display: flex;
-      align-items: center; gap: 8px;
-    }
-    .card-desc { font-size: 13px; color: var(--text2); line-height: 1.6; margin-bottom: 16px; }
-
-    /* ─── Code Block ─── */
-    .code-block {
-      position: relative; background: #0a0a0c; border: 1px solid var(--border);
-      border-radius: var(--radius-sm); overflow: hidden;
-    }
-    .code-header {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 8px 14px; background: var(--surface2);
-      border-bottom: 1px solid var(--border);
-    }
-    .code-filename { font-size: 11px; font-weight: 600; color: var(--text2); font-family: 'JetBrains Mono', monospace; }
-    .copy-btn {
-      padding: 4px 10px; font-size: 11px; font-weight: 600;
-      font-family: inherit; color: var(--text2); background: transparent;
-      border: 1px solid var(--border); border-radius: 6px; cursor: pointer;
-      transition: all 0.15s var(--ease);
-    }
-    .copy-btn:hover { border-color: var(--accent); color: var(--accent); }
-    .copy-btn.copied { border-color: var(--green); color: var(--green); }
-    pre {
-      padding: 16px; overflow-x: auto; font-family: 'JetBrains Mono', monospace;
-      font-size: 12.5px; line-height: 1.7; color: var(--text); tab-size: 2;
-    }
-    pre .key { color: #60a5fa; }
-    pre .str { color: #4ade80; }
-    pre .comment { color: var(--text3); font-style: italic; }
-    pre .punct { color: var(--text2); }
-
-    /* ─── Steps ─── */
-    .steps { counter-reset: step; }
-    .step {
-      position: relative; padding-left: 40px; margin-bottom: 24px;
-      counter-increment: step;
-    }
-    .step::before {
-      content: counter(step);
-      position: absolute; left: 0; top: 1px;
-      width: 26px; height: 26px; border-radius: 50%;
-      background: var(--surface2); border: 1px solid var(--border);
-      display: flex; align-items: center; justify-content: center;
-      font-size: 12px; font-weight: 700; color: var(--text2);
-    }
-    .step-title { font-size: 14px; font-weight: 700; margin-bottom: 6px; }
-    .step-desc { font-size: 13px; color: var(--text2); line-height: 1.6; }
-    .step-desc code {
-      background: var(--surface2); padding: 2px 7px; border-radius: 5px;
-      font-family: 'JetBrains Mono', monospace; font-size: 11.5px;
-      color: var(--accent); border: 1px solid var(--border);
-    }
-
-    /* ─── Tool List ─── */
-    .tool-grid { display: grid; gap: 8px; }
-    .tool-item {
-      display: flex; align-items: flex-start; gap: 12px;
-      padding: 14px 16px; background: var(--surface2);
-      border-radius: var(--radius-sm); border: 1px solid transparent;
-      transition: border-color 0.15s var(--ease);
-    }
-    .tool-item:hover { border-color: var(--border); }
-    .tool-name {
-      font-family: 'JetBrains Mono', monospace; font-size: 12.5px;
-      font-weight: 600; color: var(--accent); white-space: nowrap;
-    }
-    .tool-desc { font-size: 12.5px; color: var(--text2); line-height: 1.5; }
-
-    /* ─── Divider ─── */
-    .divider { height: 1px; background: var(--border); margin: 32px 0; opacity: 0.4; }
-
-    /* ─── Animations ─── */
-    .fade-in { animation: fadeIn 0.3s var(--ease); }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(6px); } to { opacity: 1; transform: none; } }
-
-    /* ─── Responsive ─── */
-    @media (max-width: 640px) {
-      .app { padding: 28px 16px 64px; }
-    }
   </style>
 </head>
 <body>
@@ -174,7 +19,7 @@
 
     <!-- Nav -->
     <div class="nav">
-      <a href="/" class="logo">pod<span>cli</span></a>
+      <a href="/"><img src="/podcli-logo-transparent.png" alt="podcli" style="height:22px"></a>
       <a href="/" class="nav-link">Back to app</a>
     </div>
 
