--- a/src/ui/public/knowledge.html
+++ b/src/ui/public/knowledge.html
@@ -4,169 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>podcli — Knowledge Base</title>
+  <link rel="icon" type="image/png" href="/podcli-icon-transparent.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.9/babel.min.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
   <style>
-    :root {
-      --bg: #0b0b0d;
-      --surface: #131316;
-      --surface2: #1b1b20;
-      --border: #252530;
-      --border-hover: #35354a;
-      --text: #e8e8e2;
-      --text2: #77776f;
-      --text3: #4e4e48;
-      --accent: #d4874a;
-      --accent-hover: #e09860;
-      --accent-subtle: rgba(212, 135, 74, 0.10);
-      --accent-glow: rgba(212, 135, 74, 0.25);
-      --green: #4ade80;
-      --green-subtle: rgba(74, 222, 128, 0.07);
-      --green-border: rgba(74, 222, 128, 0.18);
-      --red: #f87171;
-      --red-subtle: rgba(248, 113, 113, 0.07);
-      --red-border: rgba(248, 113, 113, 0.18);
-      --radius: 12px;
-      --radius-sm: 8px;
-      --ease: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: var(--bg); color: var(--text); min-height: 100vh;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    .app { max-width: 860px; margin: 0 auto; padding: 48px 32px 96px; }
-    .nav { display: flex; align-items: center; justify-content: space-between; margin-bottom: 28px; }
-    .logo { font-size: 13px; font-weight: 700; letter-spacing: 1.2px; color: var(--text3); text-transform: uppercase; text-decoration: none; }
-    .logo span { color: var(--accent); }
-    .nav-link {
-      font-size: 13px; font-weight: 600; color: var(--text2);
-      text-decoration: none; padding: 6px 14px;
-      border-radius: var(--radius-sm); border: 1px solid var(--border);
-      transition: all 0.15s var(--ease);
-    }
-    .nav-link:hover { border-color: var(--border-hover); color: var(--text); }
-
+    .app { max-width: 860px; }
     .header { margin-bottom: 32px; }
-    h1 { font-size: 28px; font-weight: 700; letter-spacing: -0.5px; line-height: 1.15; }
-    .subtitle { font-size: 14px; color: var(--text2); margin-top: 8px; line-height: 1.6; }
-    .dir-path {
-      display: inline-flex; align-items: center; gap: 6px;
-      margin-top: 10px; padding: 5px 12px;
-      background: var(--surface); border: 1px solid var(--border);
-      border-radius: var(--radius-sm);
-      font-family: 'JetBrains Mono', monospace; font-size: 11.5px; color: var(--text2);
-    }
-
-    /* ─── Drop Zone ─── */
-    .drop-zone {
-      border: 1.5px dashed var(--border); border-radius: var(--radius);
-      padding: 36px 24px; text-align: center; cursor: pointer;
-      transition: all 0.2s var(--ease); position: relative; margin-bottom: 24px;
-    }
-    .drop-zone:hover { border-color: var(--border-hover); background: rgba(255,255,255,0.012); }
-    .drop-zone.drag-over { border-color: var(--accent); background: var(--accent-subtle); box-shadow: 0 0 0 4px var(--accent-subtle); }
-    .drop-zone .dz-icon { font-size: 28px; opacity: 0.3; margin-bottom: 8px; }
-    .drop-zone .dz-text { font-size: 13px; color: var(--text2); line-height: 1.5; }
-    .drop-zone .dz-text strong { color: var(--accent); font-weight: 600; }
-    .drop-zone input[type="file"] { position: absolute; inset: 0; opacity: 0; cursor: pointer; }
-
-    /* ─── File Grid ─── */
-    .file-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-    .file-card {
-      background: var(--surface); border: 1px solid var(--border);
-      border-radius: var(--radius); padding: 16px; cursor: pointer;
-      transition: all 0.15s var(--ease); position: relative;
-    }
-    .file-card:hover { border-color: var(--border-hover); }
-    .file-card.active { border-color: var(--accent); background: var(--accent-subtle); }
-    .file-name {
-      font-family: 'JetBrains Mono', monospace; font-size: 13px;
-      font-weight: 600; color: var(--text); margin-bottom: 4px;
-      overflow: hidden; text-overflow: ellipsis; white-space: nowrap;
-    }
-    .file-meta { font-size: 11px; color: var(--text3); }
-    .file-preview { font-size: 12px; color: var(--text2); margin-top: 8px; line-height: 1.5; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
-    .file-delete {
-      position: absolute; top: 10px; right: 10px;
-      width: 22px; height: 22px; border-radius: 6px;
-      background: transparent; border: 1px solid transparent;
-      color: var(--text3); cursor: pointer; font-size: 13px;
-      display: flex; align-items: center; justify-content: center;
-      transition: all 0.15s var(--ease); opacity: 0;
-    }
-    .file-card:hover .file-delete { opacity: 1; }
-    .file-delete:hover { border-color: var(--red-border); color: var(--red); background: var(--red-subtle); }
-
-    /* ─── Editor ─── */
-    .editor-panel {
-      background: var(--surface); border: 1px solid var(--border);
-      border-radius: var(--radius); overflow: hidden; margin-top: 20px;
-    }
-    .editor-header {
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 10px 16px; background: var(--surface2);
-      border-bottom: 1px solid var(--border);
-    }
-    .editor-filename {
-      font-family: 'JetBrains Mono', monospace; font-size: 12px;
-      font-weight: 600; color: var(--text);
-    }
-    .editor-actions { display: flex; gap: 6px; }
-    .btn {
-      padding: 6px 14px; border-radius: var(--radius-sm); font-family: inherit;
-      font-size: 12px; font-weight: 600; cursor: pointer; border: none;
-      transition: all 0.15s var(--ease); display: inline-flex;
-      align-items: center; gap: 5px;
-    }
-    .btn-primary { background: var(--accent); color: #fff; }
-    .btn-primary:hover { background: var(--accent-hover); }
-    .btn-ghost { background: transparent; color: var(--text2); border: 1px solid var(--border); }
-    .btn-ghost:hover { border-color: var(--border-hover); color: var(--text); }
-    .editor-textarea {
-      width: 100%; min-height: 320px; padding: 16px;
-      background: transparent; border: none; color: var(--text);
-      font-family: 'JetBrains Mono', monospace; font-size: 13px;
-      line-height: 1.7; resize: vertical; outline: none;
-    }
-
-    /* ─── New File ─── */
-    .new-file-row {
-      display: flex; gap: 8px; margin-top: 16px;
-    }
-    .new-file-input {
-      flex: 1; padding: 8px 14px;
-      background: var(--surface); border: 1px solid var(--border);
-      border-radius: var(--radius-sm); color: var(--text);
-      font-family: 'JetBrains Mono', monospace; font-size: 13px;
-      outline: none;
-    }
-    .new-file-input:focus { border-color: var(--accent); }
-    .new-file-input::placeholder { color: var(--text3); }
-
-    /* ─── Toast ─── */
-    .toast {
-      position: fixed; bottom: 24px; right: 24px;
-      padding: 10px 18px; border-radius: var(--radius-sm);
-      background: var(--green-subtle); border: 1px solid var(--green-border);
-      color: var(--green); font-size: 13px; font-weight: 600;
-      animation: fadeIn 0.2s var(--ease);
-    }
-
-    .empty-state { text-align: center; padding: 48px 20px; color: var(--text3); font-size: 13px; }
-
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(6px); } to { opacity: 1; transform: none; } }
-    @media (max-width: 640px) {
-      .app { padding: 28px 16px 64px; }
-      .file-grid { grid-template-columns: 1fr; }
-    }
+    .drop-zone { padding: 36px 24px; margin-bottom: 24px; }
   </style>
 </head>
 <body>
@@ -273,7 +122,7 @@
       return (
         <div className="app">
           <div className="nav">
-            <a href="/" className="logo">pod<span>cli</span></a>
+            <a href="/"><img src="/podcli-logo-transparent.png" alt="podcli" style={{ height: 22 }} /></a>
             <a href="/" className="nav-link">Back to app</a>
           </div>
 
