--- a/src/ui/public/integration.html
+++ b/src/ui/public/integration.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>podcli — Integration</title>
-  <link rel="icon" type="image/png" href="/podcli-icon-transparent.png">
+  <link rel="icon" type="image/png" href="/podcli-icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <style>
-    .app { max-width: 780px; }
-    .header { margin-bottom: 40px; }
+    .app {
+      max-width: 780px;
+    }
+
+    .header {
+      margin-bottom: 40px;
+    }
   </style>
 </head>
+
 <body>
   <div class="app fade-in">
 
@@ -26,7 +35,8 @@
     <!-- Header -->
     <div class="header">
       <h1>MCP Integration</h1>
-      <p class="subtitle">Connect podcli to Claude Desktop, Claude Code, or any MCP-compatible client to generate clips through conversation.</p>
+      <p class="subtitle">Connect podcli to Claude Desktop, Claude Code, or any MCP-compatible client to generate clips
+        through conversation.</p>
     </div>
 
     <!-- Connection Status -->
@@ -40,7 +50,8 @@
       <div class="card-label">Setup</div>
       <div class="card-title">Claude Desktop</div>
       <div class="card-desc">
-        Add podcli as an MCP server in your Claude Desktop configuration file. Claude will gain access to transcription, clip suggestion, and rendering tools.
+        Add podcli as an MCP server in your Claude Desktop configuration file. Claude will gain access to transcription,
+        clip suggestion, and rendering tools.
       </div>
 
       <div class="steps">
@@ -112,19 +123,23 @@
       <div class="tool-grid">
         <div class="tool-item">
           <span class="tool-name">transcribe_podcast</span>
-          <span class="tool-desc">Transcribe audio/video with Whisper. Supports model size selection, language detection, and speaker diarization.</span>
+          <span class="tool-desc">Transcribe audio/video with Whisper. Supports model size selection, language
+            detection, and speaker diarization.</span>
         </div>
         <div class="tool-item">
           <span class="tool-name">suggest_clips</span>
-          <span class="tool-desc">Submit an array of viral moment suggestions with title, time range, and reasoning. Used by Claude to pass clip ideas.</span>
+          <span class="tool-desc">Submit an array of viral moment suggestions with title, time range, and reasoning.
+            Used by Claude to pass clip ideas.</span>
         </div>
         <div class="tool-item">
           <span class="tool-name">create_clip</span>
-          <span class="tool-desc">Render a single short-form clip with caption style, crop strategy, and optional logo overlay.</span>
+          <span class="tool-desc">Render a single short-form clip with caption style, crop strategy, and optional logo
+            overlay.</span>
         </div>
         <div class="tool-item">
           <span class="tool-name">batch_create_clips</span>
-          <span class="tool-desc">Render multiple clips in one call. Each clip can have its own caption style and crop settings.</span>
+          <span class="tool-desc">Render multiple clips in one call. Each clip can have its own caption style and crop
+            settings.</span>
         </div>
       </div>
     </div>
@@ -136,13 +151,16 @@
 
       <div class="tool-grid">
         <div class="tool-item" style="cursor:default;">
-          <span class="tool-desc" style="color:var(--text);"><em>"Transcribe /path/to/episode.mp4 and find the 5 most viral moments, then export them with hormozi captions"</em></span>
+          <span class="tool-desc" style="color:var(--text);"><em>"Transcribe /path/to/episode.mp4 and find the 5 most
+              viral moments, then export them with hormozi captions"</em></span>
         </div>
         <div class="tool-item" style="cursor:default;">
-          <span class="tool-desc" style="color:var(--text);"><em>"Create a 30-second clip from 12:45 to 13:15 with branded captions and face-tracking crop"</em></span>
+          <span class="tool-desc" style="color:var(--text);"><em>"Create a 30-second clip from 12:45 to 13:15 with
+              branded captions and face-tracking crop"</em></span>
         </div>
         <div class="tool-item" style="cursor:default;">
-          <span class="tool-desc" style="color:var(--text);"><em>"Batch export all suggested clips with karaoke-style captions"</em></span>
+          <span class="tool-desc" style="color:var(--text);"><em>"Batch export all suggested clips with karaoke-style
+              captions"</em></span>
         </div>
       </div>
     </div>
@@ -185,7 +203,7 @@
     }
 
     function escapeHtml(str) {
-      return str.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
+      return str.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
     }
 
     function copyBlock(btn, id) {
@@ -201,4 +219,5 @@
     init();
   </script>
 </body>
+
 </html>
